--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=agrimarket
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=admin
+DB_PASSWORD=senior@mysql01
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
